--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,3 @@
-:root {
-    --black: #222831;
-    --black-light: #393E46;
-    --teal: #00ADB5;
-    --grey: #EEEEEE;
-    --purple: #6528F7;
-    --green: #35A29F;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-}
-
-html,
-body {
-    /* height: 100%; */
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: var(--black);
-}
-
-body {
-    background: var(--grey);
-}
-
-a {
-    color: var(--black);
-    text-decoration: none;
-    font-size: 1em;
-    font-weight: 600;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
